--- a/desafio012/estilo/style.css
+++ b/desafio012/estilo/style.css
@@ -1,5 +1,10 @@
 @charset "utf8";
 
+@import url('https://fonts.googleapis.com/css2? family= Dancing+Script & display=swap');
+
+:root {
+    --font01: 'Dancing Script', cursiva;
+}
 * {
     margin: 0px;
     padding: 0px;
@@ -18,6 +23,7 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font01);
 }
 header > p {
     padding-bottom: 50px;
@@ -37,6 +43,7 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font01);
 }
 section.normal {
     background-color: white;
