--- a/desafio012/estilo/style.css
+++ b/desafio012/estilo/style.css
@@ -3,8 +3,10 @@
 @import url('https://fonts.googleapis.com/css2? family= Dancing+Script & display=swap');
 
 :root {
-    --font01: 'Dancing Script', cursiva;
+    --font:'Dancing Script', cursiva;
 }
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -23,7 +25,7 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
-    font-family: var(--font01);
+    font-family: var(--font);
 }
 header > p {
     padding-bottom: 50px;
@@ -43,7 +45,7 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
-    font-family: var(--font01);
+    font-family: var(--font);
 }
 section.normal {
     background-color: white;
